syntax = "proto3";

package pb;

import "comment/comment.proto";

option go_package = "github.com/paweldyl/blog-backend/pb";

message CreateCommentRequest {
    string post_id = 1;
    string text = 2;
}

message CreateCommentResponse {
    Comment comment = 1;
}


